Update Labirinto.java